--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,138 @@
 
+body{
+    margin: 0px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+
+.navbar{
+    background-color: black;
+}
+.navbar ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+}
+.list{
+    display: inline-block;
+}
+.list a{
+    display: block;
+    padding: 25px;
+    text-decoration: none;
+    color: rgb(213, 164, 85);
+    letter-spacing: 3px;
+}
+.list a:hover{
+    color: white;
+}
+
+h1,h4,h5{
+    margin: 0cm;
+}
+#home{
+    width: 100%;
+    height: 85vh;
+    background-image: linear-gradient(rgb(213, 164, 85),rgb(213, 164, 85)),url(images/background.jpg);
+    background-blend-mode: multiply;
+    background-size: cover;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.heading{
+    color: whitesmoke;
+    font-size: 100px;
+    font-weight: 500;
+}
+.welcome{
+    color: whitesmoke;
+    letter-spacing: 8px;
+    font-size: 30px;
+}
+
+
+#recipe{
+    padding: 70px 0;
+}
+.image-wrapper{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 2px;
+}
+.image-wrapper img{
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    transition: all 0.4s;
+}
+.image-wrapper:hover img{
+    transform: scale(1.2,1.2);
+}
+.image-text{
+    padding: 20 15px;
+    max-height: 150px;
+    position: absolute;
+    bottom: 0px;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: whitesmoke;
+}
+.image-text h5{
+    color: rgb(213, 164, 85);
+    font-size: 20px;
+    font-weight: 500;
+}
+.image-text p{
+    line-height: 24px;
+}
+
+
+#about{
+    padding: 70px 0px;
+    background-color: rgb(213, 164, 85);
+    color: whitesmoke;
+}
+#about h4{
+    font-size: 28px;
+}
+.image{
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
+#about p{
+ line-height: 36px;  
+}
+.image-bg{
+    position: relative;
+    z-index: 1;
+}
+.image-bg::before{
+    position: absolute;
+    top: -30px;
+    left: -30px;
+    content: "";
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-color: black;
+}
+.image-bg img{
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.6);
+}
+
+
+.contact{
+    padding: 70px 0;
+    background-color: black;
+    color: whitesmoke;
+}
+.contact img{
+    padding: 5px;
+}
